--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				<p class="text-brand-primary fw-bold text-uppercase text-center">La société Sunpower</p>
 
 				<div class="row">
-					<p class="mb-4 col-10 fs-8">
+					<p class="mb-4 col-10 fs-8 offset-lg-2">
 						<span class="text-brand-primary fw-bold fs-7">Fondée en 2013 ,</span>
 						notre société Sunpower est basée à Grenoble. Son capital est de 10 millions d’euros.
 					</p>
@@ -157,7 +157,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="row mb-4">
+				<div class="row mb-4 d-lg-none">
 					<p class="text-brand-primary fs-7 fw-bold">Points clés:</p>
 					<ul class="list-unstyled fs-8 px-4">
 						<li><span class="text-brand-ternary">30M d’euros</span> de levée de fond</li>
@@ -173,5 +173,53 @@
 				</div>
 			</section>
 		</main>
+
+		<footer class="container-fluid p-3">
+			<div class="d-lg-flex">
+				<div id="logo__footer" class="row col-10 col-md-6 col-lg-3 mx-auto mx-lg-0 mt-5">
+					<img class="mx-auto d-block img-fluid" src="../media/logo.png" alt="Sunpower logo" />
+				</div>
+				<div id="site_map__footer" class="row p-1 mt-5 d-lg-flex justify-content-lg-around col-lg-6">
+					<ul class="col list-unstyled text-md-center">
+						<li class="mb-3">
+							<a href="../pages/product.html" class="text-brand-primary text-shadow">Ombrières solaires</a>
+						</li>
+						<li class="mb-3">
+							<a href="../pages/map.html" class="text-brand-primary text-shadow">Carte interactive</a>
+						</li>
+						<li class="mb-3">
+							<a href="../pages/product.html#products" class="text-brand-primary text-shadow">Produits</a>
+						</li>
+						<li class="mb-3">
+							<a href="../pages/activities.html" class="text-brand-primary text-shadow">Activités</a>
+						</li>
+					</ul>
+					<ul class="col list-unstyled text-md-center">
+						<li class="mb-3"><a href="../pages/propos.html" class="text-brand-primary text-shadow">À propos</a></li>
+						<li class="mb-3">
+							<a href="../pages/legalmentions.html" class="text-brand-primary text-shadow">Mentions légales</a>
+						</li>
+						<li class="mb-3"><a href="../pages/cgv.html" class="text-brand-primary text-shadow">CGV</a></li>
+						<li class="mb-3">
+							<a href="../pages/sitemap.html" class="text-brand-primary text-shadow">Plan du Site</a>
+						</li>
+					</ul>
+				</div>
+
+				<div class="container-fluid text-center col-lg-3 my-lg-auto">
+					<a href="contact.html" class="text-brand-primary fs-4 fw-bold">Nous contacter</a>
+				</div>
+			</div>
+			<hr />
+			<div id="social__footer" class="container-fluid d-flex justify-content-center" style="height: 5em">
+				<i class="bi bi-facebook col-3 fs-1 text-center blue"></i
+				><i class="bi bi-linkedin col-3 fs-1 text-center blue"></i
+				><i class="bi bi-twitter col-3 fs-1 text-center blue"></i>
+			</div>
+
+			<div id="copyright" class="container text-center">
+				<p><span>&copy;</span> 2022 Sunpower - Produits & Activités autour des énergies renouvelables</p>
+			</div>
+		</footer>
 	</body>
 </html>
