homepage style and images

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					L'énergie <span class="text-brand-ternary">verte</span> &
 					<span class="text-brand-ternary">renouvelable</span> à portée de main
 				</p>
-				<div class="row">
+				<div class="row mb-lg-5">
 					<p class="col-10 fs-8">
 						<span class="text-brand-primary fw-bold fs-7">Nous concevons</span
 						><span class="paragraph-brand">
@@ -49,10 +49,12 @@
 						>
 					</p>
 				</div>
-				<div class="row d-none d-lg-block mb-5">
-					<div class="col-6 offset-3"><img src="../media/homepagePanel.png" class="img-fluid" /></div>
+				<div class="row d-none d-lg-block mb-5 mb-lg-5 hover-zoom">
+					<div class="col-6 offset-3">
+						<img src="../media/homepagePanel.png" class="img-fluid rounded" />
+					</div>
 				</div>
-				<div class="row">
+				<div class="row mb-lg-5">
 					<p class="text-center col-10 offset-1 fs-8 text-lg-end col-lg-8 offset-lg-4">
 						<span class="text-brand-primary fw-bold fs-7">L’ombrière solaire</span><br />
 						Avec ce bijou de technologie, n’importe quelle véhicule électrique pourra recharger ses batteries avec une
@@ -60,7 +62,7 @@
 						tout en jouant le rôle d’abri.
 					</p>
 				</div>
-				<div class="row">
+				<div class="row mb-lg-3">
 					<p class="text-end col-10 offset-2 fs-8 text-lg-center col-lg-8 offset-lg-2">
 						<span class="text-brand-primary fw-bold fs-7">Nos collaborateurs</span><br />
 						et partenaires principaux sont l’<a href="https://www.ademe.fr/" class="text-brand-primary">ADEME</a>, l’<a
@@ -73,10 +75,29 @@
 						nombreuses années et sont gages de confiance pour nos clients.
 					</p>
 				</div>
+				<div class="container mb-lg-5 d-lg-block d-none">
+					<div class="row">
+						<div class="col-2 offset-3">
+							<a href="https://www.ines-solaire.org/">
+								<img src="../media/ademe.gif" alt="ADEME" class="img-fluid" />
+							</a>
+						</div>
+						<div class="col-2">
+							<a href="https://www.cea.fr/">
+								<img src="../media/cea.gif" alt="CEA" class="img-fluid" />
+							</a>
+						</div>
+						<div class="col-2">
+							<a href="https://www.ademe.fr/">
+								<img src="../media/ines.gif" alt="INES" class="img-fluid" />
+							</a>
+						</div>
+					</div>
+				</div>
 			</section>
 			<!-- Second frame -->
 			<section id="frame2" class="d-flex flex-column justify-content-evenly p-3">
-				<div class="row">
+				<div class="row mb-lg-5">
 					<p class="col-10 text-center offset-1 fs-8 col-lg-8 text-lg-start offset-lg-0">
 						<span class="text-brand-primary fw-bold fs-7">Chaque borne</span
 						><span class="paragraph-brand">
@@ -100,7 +121,7 @@
 					</div>
 				</div>
 
-				<div id="map-container-google-1" class="z-depth-1-half map-container d-none d-lg-block">
+				<div id="map-container-google-1" class="z-depth-1-half map-container d-none d-lg-block mb-lg-5">
 					<iframe
 						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46221.28625561081!2d3.839064197764833!3d43.61007297556519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b6af0725dd9db1%3A0xad8756742894e802!2sMontpellier!5e0!3m2!1sfr!2sfr!4v1666879267308!5m2!1sfr!2sfr"
 						width="600"
@@ -112,20 +133,20 @@
 					></iframe>
 				</div>
 			</section>
-			<section id="frame3" class="d-flex flex-column justify-content-evenly p-3">
-				<p class="text-brand-primary fw-bold text-uppercase text-center">La société Sunpower</p>
+			<section id="frame3" class="d-flex flex-column justify-content-evenly p-3 d-lg-none">
+				<p class="text-brand-primary fw-bold text-uppercase text-center fs-7">La société Sunpower</p>
 
-				<div class="row">
-					<p class="mb-4 col-10 fs-8 offset-lg-2">
+				<div class="row mb-lg-5">
+					<p class="mb-4 col-10 col-lg-8 fs-8 offset-lg-2">
 						<span class="text-brand-primary fw-bold fs-7">Fondée en 2013 ,</span>
 						notre société Sunpower est basée à Grenoble. Son capital est de 10 millions d’euros.
 					</p>
 				</div>
-				<div class="row">
+				<div class="row mb-lg-5">
 					<div class="col-4">
 						<img src="../media/serge.png" alt="Serge Turing" />
 					</div>
-					<div class="col-8">
+					<div class="col-8 mb-lg-5">
 						<p class="text-end fs-8">
 							<span class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize">Serge turing</span>
 							<br />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -133,7 +154,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row mb-lg-5">
 					<div class="col-8">
 						<p class="fs-8">
 							<span class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize">Hugo Oppenheimer</span
@@ -141,11 +162,11 @@
 							et
 						</p>
 					</div>
-					<div class="col-4">
+					<div class="col-4 text-lg-end">
 						<img src="../media/hugo.png" alt="Hugo Oppenheimer" />
 					</div>
 				</div>
-				<div class="row">
+				<div class="row mb-lg-5">
 					<div class="col-4">
 						<img src="../media/alex.png" alt="Alex Pareneinstein" />
 					</div>
@@ -173,53 +194,5 @@
 				</div>
 			</section>
 		</main>
-
-		<footer class="container-fluid p-3">
-			<div class="d-lg-flex">
-				<div id="logo__footer" class="row col-10 col-md-6 col-lg-3 mx-auto mx-lg-0 mt-5">
-					<img class="mx-auto d-block img-fluid" src="../media/logo.png" alt="Sunpower logo" />
-				</div>
-				<div id="site_map__footer" class="row p-1 mt-5 d-lg-flex justify-content-lg-around col-lg-6">
-					<ul class="col list-unstyled text-md-center">
-						<li class="mb-3">
-							<a href="../pages/product.html" class="text-brand-primary text-shadow">Ombrières solaires</a>
-						</li>
-						<li class="mb-3">
-							<a href="../pages/map.html" class="text-brand-primary text-shadow">Carte interactive</a>
-						</li>
-						<li class="mb-3">
-							<a href="../pages/product.html#products" class="text-brand-primary text-shadow">Produits</a>
-						</li>
-						<li class="mb-3">
-							<a href="../pages/activities.html" class="text-brand-primary text-shadow">Activités</a>
-						</li>
-					</ul>
-					<ul class="col list-unstyled text-md-center">
-						<li class="mb-3"><a href="../pages/propos.html" class="text-brand-primary text-shadow">À propos</a></li>
-						<li class="mb-3">
-							<a href="../pages/legalmentions.html" class="text-brand-primary text-shadow">Mentions légales</a>
-						</li>
-						<li class="mb-3"><a href="../pages/cgv.html" class="text-brand-primary text-shadow">CGV</a></li>
-						<li class="mb-3">
-							<a href="../pages/sitemap.html" class="text-brand-primary text-shadow">Plan du Site</a>
-						</li>
-					</ul>
-				</div>
-
-				<div class="container-fluid text-center col-lg-3 my-lg-auto">
-					<a href="contact.html" class="text-brand-primary fs-4 fw-bold">Nous contacter</a>
-				</div>
-			</div>
-			<hr />
-			<div id="social__footer" class="container-fluid d-flex justify-content-center" style="height: 5em">
-				<i class="bi bi-facebook col-3 fs-1 text-center blue"></i
-				><i class="bi bi-linkedin col-3 fs-1 text-center blue"></i
-				><i class="bi bi-twitter col-3 fs-1 text-center blue"></i>
-			</div>
-
-			<div id="copyright" class="container text-center">
-				<p><span>&copy;</span> 2022 Sunpower - Produits & Activités autour des énergies renouvelables</p>
-			</div>
-		</footer>
 	</body>
 </html>
