--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		></script>
 
 		<link rel="stylesheet" href="style.css" />
-		<script src="genericTags.js" defer></script>
+		<script src="./genericTags.js" defer></script>
 		<script src="index.js" defer></script>
 		<script src="../js/scrollDown.js" defer></script>
 		<title>Page d'accueil</title>
