--- a/pages/contact_ent_form.html
+++ b/pages/contact_ent_form.html
@@ -100,6 +100,7 @@
     <main id="main" class="container">
       <div class="d-flex flex-column my-4 ent_form_page">
         <div
+          id="ent_form"
           class="d-inline-flex align-items-center w-100 mb-4 ent_form_page_head"
         >
           <a class="position-absolute" href=""
@@ -109,12 +110,10 @@
             Contact
           </h1>
         </div>
-        <section
-          class="d-flex flex-column mx-auto w-75"
-          id="ent_first_form_page"
-        >
+        <section id="steps" class="mx-auto w-75">
           <div
-            class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center ent_form_page_rect_select"
+            id="first_step"
+            class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center ent_form_page_rect_select w-75"
           >
             <span
               class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5"
@@ -132,12 +131,55 @@
             >
           </div>
           <div
-            class="d-flex flex-column align-items-center mb-5 ent_form_page_form"
+            id="second_step"
+            class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center ent_form_page_rect_select"
           >
-            <form
-              action="#"
-              class="d-flex flex-column w-100 p-2 rounded-5 bg-brand-secondary p-4 mb-5"
+            <span
+              class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5"
+              >1</span
             >
+            <hr class="w-25" />
+            <span
+              class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5"
+              >2</span
+            >
+            <hr class="w-25" />
+            <span
+              class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5"
+              >3</span
+            >
+          </div>
+          <div
+            id="third_step"
+            class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center ent_form_page_rect_select"
+          >
+            <span
+              class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5"
+              >1</span
+            >
+            <hr class="w-25" />
+            <span
+              class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5"
+              >2</span
+            >
+            <hr class="w-25" />
+            <span
+              class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5"
+              >3</span
+            >
+          </div>
+        </section>
+        <div
+          id="contact_div"
+          class="d-flex flex-column align-items-center mb-5 ent_form_page_form mx-auto w-75"
+        >
+          <form
+            id="contact_form"
+            action="contact_ent_form.html"
+            method="get"
+            class="d-flex flex-column w-100 p-2 rounded-5 bg-brand-secondary p-4 mb-5"
+          >
+            <div id="first_form" class="d-flex flex-column ent_form_page_form">
               <label for="ent_form_name">Prénom</label
               ><input
                 class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
@@ -170,41 +212,8 @@
                 placeholder="ex. john.doe@gmail.com"
                 type="text"
               />
-            </form>
-            <a class="text-center" href="#" onclick="first_next()"
-              ><img alt="" class="my-4" src="../media/svg/next_button.svg"
-            /></a>
-          </div>
-        </section>
-        <section
-          class="d-flex flex-column mx-auto w-75"
-          id="ent_second_form_page"
-        >
-          <div
-            class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center ent_form_page_rect_select"
-          >
-            <span
-              class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5"
-              >1</span
-            >
-            <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5"
-              >2</span
-            >
-            <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5"
-              >3</span
-            >
-          </div>
-          <div
-            class="d-flex flex-column align-items-center mb-5 ent_form_page_form"
-          >
-            <form
-              action="#"
-              class="d-flex flex-column w-100 p-2 rounded-5 bg-brand-secondary p-4 mb-5"
-            >
+            </div>
+            <div id="second_form" class="d-flex flex-column ent_form_page_form">
               <label for="ent_form_adress">Adresse</label
               ><input
                 class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
@@ -229,7 +238,7 @@
                 placeholder="ex. Montpellier"
                 type="text"
               />
-              <label for="ent_form_email">Téléphone</label
+              <label for="ent_form_phone">Téléphone</label
               ><input
                 class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark mb-2"
                 id="ent_form_phone"
@@ -237,54 +246,16 @@
                 placeholder="ex. +33 1 23 45 67 89"
                 type="text"
               />
-            </form>
-            <div class="d-inline-flex">
-              <a class="text-center mx-4" href="#" onclick="second_back()"
-                ><img alt="" class="my-4" src="../media/svg/back_button.svg"
-              /></a>
-              <a class="text-center mx-4" href="#" onclick="second_next(this)"
-                ><img alt="" class="my-4" src="../media/svg/next_button.svg"
-              /></a>
             </div>
-          </div>
-        </section>
-        <section
-          class="d-flex flex-column mx-auto w-75"
-          id="ent_third_form_page"
-        >
-          <div
-            class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center ent_form_page_rect_select"
-          >
-            <span
-              class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5"
-              >1</span
-            >
-            <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5"
-              >2</span
-            >
-            <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5"
-              >3</span
-            >
-          </div>
-          <div
-            class="d-flex flex-column align-items-center mb-5 ent_form_page_form"
-          >
-            <form
-              action="#"
-              class="d-flex flex-column w-100 p-2 rounded-5 bg-brand-secondary p-4 mb-5"
-            >
+            <div id="third_form" class="d-flex flex-column ent_form_page_form">
               <label for="ent_form_desc">Description</label
               ><textarea
                 placeholder="ex. Installation d’ombrières solaires sur...(max 200 caractères)"
-                class="bg-brand-secondary_40 border-dark mb-3 pb-5"
+                class="bg-brand-secondary_40 border-dark mb-3 pb-2"
                 name="desc"
                 id="ent_form_desc"
               ></textarea>
-              <label for="ent_form_upload"></label>
+              <label class="d-none" for="ent_form_upload">Fichier</label>
               <div
                 class="text-center border border-2 border-dark position-relative"
               >
@@ -299,17 +270,37 @@
                   Choisir un fichier depuis votre smartphone
                 </p>
               </div>
-            </form>
-            <div class="d-inline-flex">
-              <a class="text-center mx-4" href="#" onclick="third_back()"
-                ><img alt="" class="my-4" src="../media/svg/back_button.svg"
-              /></a>
-              <a class="text-center mx-4" href="#"
-                ><img alt="" class="my-4" src="../media/svg/next_button.svg"
-              /></a>
             </div>
+          </form>
+          <div id="first_form_btn" class="d-inline-flex align-items-center">
+            <span class="text-center" href="#" onclick="first_next()"
+              ><img alt="" class="my-4" src="../media/svg/next_button.svg"
+            /></span>
           </div>
-        </section>
+          <div id="second_form_btn" class="d-inline-flex align-items-center">
+            <span class="text-center mx-4" href="#" onclick="second_back()"
+              ><img alt="" class="my-4" src="../media/svg/back_button.svg"
+            /></span>
+            <span class="text-center mx-4" href="#" onclick="second_next()"
+              ><img alt="" class="my-4" src="../media/svg/next_button.svg"
+            /></span>
+          </div>
+          <div id="third_form_btn" class="d-inline-flex align-items-center">
+            <span class="text-center mx-4" href="#" onclick="third_back()"
+              ><img alt="" class="my-4" src="../media/svg/back_button.svg"
+            /></span>
+            <button
+              class="h-100 bg-brand-primary border-0 text-white rounded-2 fs-3 p-2 mx-4"
+              onclick="voidCheck()"
+            >
+              Envoyer
+            </button>
+          </div>
+        </div>
+        <div
+          id="ent_resume"
+          class="d-flex flex-column ent_form_page_form mx-auto w-100 py-4 px-2 rounded-5 bg-brand-secondary"
+        ></div>
       </div>
     </main>
     <!--End de la main page -->
