--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,10 +8,7 @@
     <!-- bootstrap -->
 
     <!-- icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
     <!-- css -->
     <link
@@ -30,7 +27,7 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../index.js" defer></script>
+    <script src="../js/main.js" defer></script>
     <title>contact</title>
   </head>
   <body>
@@ -53,45 +50,25 @@
         style="height: 85vh"
       >
         <li class="fs-4">
-          <a
-            href="./pages/product.html#products"
-            class="text-uppercase text-brand-primary"
-            >Ombrières solaires</a
-          >
+          <a href="./pages/product.html#products" class="text-uppercase text-brand-primary">Ombrières solaires</a>
         </li>
         <li><hr class="text-brand-ternary border-5 opacity-75" /></li>
         <li class="fs-4">
-          <a
-            href="./pages/product.html"
-            class="text-uppercase text-brand-primary"
-            >Produits</a
-          >
+          <a href="./pages/product.html" class="text-uppercase text-brand-primary">Produits</a>
         </li>
         <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary"
-            >Carte interactive</a
-          >
+          <a href="" class="text-uppercase text-brand-primary">Carte interactive</a>
         </li>
         <li class="fs-4">
-          <a
-            href="./pages/activities.html"
-            class="text-uppercase text-brand-primary"
-            >Activités</a
-          >
+          <a href="./pages/activities.html" class="text-uppercase text-brand-primary">Activités</a>
         </li>
 
         <li><hr class="text-brand-ternary border-5 opacity-75" /></li>
         <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary"
-            >Nous contacter</a
-          >
+          <a href="" class="text-uppercase text-brand-primary">Nous contacter</a>
         </li>
         <li class="fs-4">
-          <a
-            href="./pages/propos.html"
-            class="text-uppercase text-brand-primary"
-            >À propos</a
-          >
+          <a href="./pages/propos.html" class="text-uppercase text-brand-primary">À propos</a>
         </li>
       </ul>
     </div>
@@ -104,37 +81,22 @@
           <h1 class="text-uppercase fw-bold">un renseignement ?</h1>
           <p class="text-uppercase fw-bold">un devis ?</p>
           <p class="mt-4">
-            Conseil pour l’implantation d’ombrières solaires, nous aurons
-            toujours une solution adaptée à vos besoins.
+            Conseil pour l’implantation d’ombrières solaires, nous aurons toujours une solution adaptée à vos besoins.
           </p>
         </div>
         <div class="text-center mt-5">
           <h3 class="text-uppercase">Vous Êtes:</h3>
 
-          <ul
-            id="contact_links"
-            class="p-5 list-unstyled d-flex flex-column gap-3"
-          >
+          <ul id="contact_links" class="p-5 list-unstyled d-flex flex-column gap-3">
             <li class="rounded bg-brand-primary">
-              <a
-                href=""
-                class="d-block p-2 rounded text-decoration-none text-white"
-                >Particulier</a
-              >
+              <a href="" class="d-block p-2 rounded text-decoration-none text-white">Particulier</a>
             </li>
             <li class="rounded bg-brand-primary">
-              <a
-                href=""
-                class="d-block p-2 rounded text-decoration-none text-white"
-                >Syndic</a
-              >
+              <a href="" class="d-block p-2 rounded text-decoration-none text-white">Syndic</a>
             </li>
             <li class="rounded bg-brand-primary">
-              <a
-                href=""
-                class="d-block p-2 rounded text-decoration-none text-white h-100 w-100"
-                >Une Entreprise <span class="d-block">Et/Ou</span> Une
-                Collectivité</a
+              <a href="" class="d-block p-2 rounded text-decoration-none text-white h-100 w-100"
+                >Une Entreprise <span class="d-block">Et/Ou</span> Une Collectivité</a
               >
             </li>
           </ul>
@@ -145,11 +107,7 @@
     <!-- footer -->
     <footer class="container-fluid p-3">
       <div id="logo__footer" class="row col-10 rounded mx-auto mt-5">
-        <img
-          class="row mx-auto d-block"
-          src="../media/logo.png"
-          alt="Sunpower logo"
-        />
+        <img class="row mx-auto d-block" src="../media/logo.png" alt="Sunpower logo" />
       </div>
       <div id="site_map__footer" class="row p-1 mt-5">
         <ul class="col list-unstyled">
@@ -170,21 +128,14 @@
         <a href=""> Nous contacter</a>
       </div>
       <hr />
-      <div
-        id="social__footer"
-        class="container-fluid d-flex justify-content-center"
-        style="height: 5em"
-      >
+      <div id="social__footer" class="container-fluid d-flex justify-content-center" style="height: 5em">
         <i class="bi bi-facebook col-3 fs-1 text-center blue"></i
         ><i class="bi bi-linkedin col-3 fs-1 text-center blue"></i
         ><i class="bi bi-twitter col-3 fs-1 text-center blue"></i>
       </div>
 
       <div id="copyright" class="container text-center">
-        <p>
-          <span>&copy;</span> 2022 Sunpower - Produits & Activités autour des
-          énergies renouvelables
-        </p>
+        <p><span>&copy;</span> 2022 Sunpower - Produits & Activités autour des énergies renouvelables</p>
       </div>
     </footer>
   </body>
