--- a/pages/product.html
+++ b/pages/product.html
@@ -1,116 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- bootstrap -->
 
-  <!-- bootstrap -->
+    <!-- icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
-  <!-- icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+    <!-- css -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
 
-  <!-- css -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <!-- js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+      defer
+    ></script>
 
-  <!-- js -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"
-    defer></script>
+    <link rel="stylesheet" href="../style.css" />
+    <script src="../js/main.js" defer></script>
+    <title>Products</title>
+  </head>
 
-  <script src="../genericTags.js" defer></script>
-
-
-
-
-  <link rel="stylesheet" href="../style.css" />
-  <script src="../index.js" defer></script>
-  <title>Products</title>
-</head>
-
-<body>
-  <main id="main">
-    <section class="container p-3 ">
-      <div class="row p-3 ">
-        <h1 class="text-center fw-bolder text-uppercase text-brand-primary fs-2 lh-base py-4 text-shadow">Les ombrières
-          solaires</h1>
-        <p class="fs-8">Le développement des ombrières solaires pour la recharge des véhicules électriques constitue le
-          pilier de notre développement.</p>
-      </div>
-
-      <!-- text center vs text start ? -->
-      <div class="row gap-3 p-3 text-center">
-        <h2 class="fs-8 text-start">Trois raisons de choisir les ombrières solaires Sunpower : </h2>
-        <div id="durability">
-          <i class="bi bi-calendar-check fs-0 text-brand-ternary"></i>
-          <h3 class="mt-3 text-brand-ternary fs-7">Durabilité prouvée
-          </h3>
-          <p class="fs-8">Les ombrières solaires Sunpower sont conçus pour fonctionner parfaitement en
-            conditions
-            réelles.
+  <body>
+    <main id="main">
+      <section class="container p-3">
+        <div class="row p-3">
+          <h1 class="text-center fw-bolder text-uppercase text-brand-primary fs-2 lh-base py-4 text-shadow">
+            Les ombrières solaires
+          </h1>
+          <p class="fs-8">
+            Le développement des ombrières solaires pour la recharge des véhicules électriques constitue le pilier de
+            notre développement.
           </p>
-
         </div>
-        <div id="fiabilité">
-          <i class="bi bi-tools fs-0 text-brand-ternary"></i>
-          <h3 class="mt-3 text-brand-ternary fs-7">Fiabilité éprouvée
-          </h3>
-          <p class="fs-8">Les ombrières solaires Sunpower garantissent des performances sans compromis et
-            une fiabilité
-            à
-            toute épreuve.</p>
+
+        <!-- text center vs text start ? -->
+        <div class="row gap-3 p-3 text-center">
+          <h2 class="fs-8 text-start">Trois raisons de choisir les ombrières solaires Sunpower :</h2>
+          <div id="durability">
+            <i class="bi bi-calendar-check fs-0 text-brand-ternary"></i>
+            <h3 class="mt-3 text-brand-ternary fs-7">Durabilité prouvée</h3>
+            <p class="fs-8">
+              Les ombrières solaires Sunpower sont conçus pour fonctionner parfaitement en conditions réelles.
+            </p>
+          </div>
+          <div id="fiabilité">
+            <i class="bi bi-tools fs-0 text-brand-ternary"></i>
+            <h3 class="mt-3 text-brand-ternary fs-7">Fiabilité éprouvée</h3>
+            <p class="fs-8">
+              Les ombrières solaires Sunpower garantissent des performances sans compromis et une fiabilité à toute
+              épreuve.
+            </p>
+          </div>
+          <div id="energie">
+            <i class="bi bi-sun-fill fs-0 text-brand-ternary"></i>
+            <h3 class="mt-3 text-brand-ternary fs-7">Plus d'énergie</h3>
+            <p class="fs-8">
+              Sunpower produit davantage d'énergie sur toute la durée de vie du système et offre l'assurance de faire
+              des économies.
+            </p>
+          </div>
         </div>
-        <div id="energie">
-          <i class="bi bi-sun-fill fs-0 text-brand-ternary"></i>
-          <h3 class="mt-3 text-brand-ternary fs-7">Plus d'énergie
-          </h3>
-          <p class="fs-8">Sunpower produit davantage d'énergie sur toute la durée de vie du système et offre
-            l'assurance
-            de
-            faire des économies.</p>
-
+      </section>
+      <section id="products" class="container grid p-4 text-center">
+        <div class="row">
+          <h2 class="mt-3 fw-bolder text-uppercase text-brand-primary fs-2 py-4 text-shadow">Nos produits</h2>
+          <p class="text-start fs-8">
+            La gamme complète de panneaux solaires SunPower répond à tous vos besoins énergétiques, quels qu'ils soient.
+          </p>
         </div>
-      </div>
-    </section>
-    <section id="products" class="container grid p-4 text-center">
-      <div class="row">
-        <h2 class="mt-3 fw-bolder text-uppercase text-brand-primary fs-2 py-4 text-shadow">Nos produits</h2>
-        <p class="text-start fs-8">La gamme complète de panneaux solaires SunPower répond à tous vos besoins
-          énergétiques,
-          quels qu'ils soient.</p>
-
-      </div>
-      <div class="row p-2 mt-4  bg-light  rounded g-2">
-        <img class="p-0 rounded " src="../media/photos/panel1.png" alt="Panneaux solaires Sunpower Maxi">
-        <h2 class="mt-3 text-brand-ternary fs-7 lh-base">Panneaux solaires<span style="display: block;">Sunpower Maxi
-        </h2>
-        <p class="fs-8">Les panneaux solaires Sunpower Maxi allient le rendement le plus élevé du marché à
-          une fiabilité inégalée et une production optimale</p>
-      </div>
-      <div class="row p-3 mt-4 bg-light rounded g-2">
-        <img class="p-0 rounded " src="../media/photos/panel3.png" alt="Panneaux solaires Sunpower Perform">
-        <h2 class="mt-3 text-brand-ternary fs-7 lh-base">Panneaux solaires<span style="display: block;"></span>Sunpower
-          Perform
-        </h2>
-        <p class="fs-8">Les panneaux solaires Sunpower Perform affichent un rendement, une qualité et une
-          fiabilité bien
-          supérieurs à
-          ceux des panneaux conventionnels.</p>
-      </div>
-      <div class="row p-3 mt-4 bg-light rounded g-2">
-        <img class="p-0 rounded " src="../media/photos/panel4.png" alt="Panneaux solaires Sunpower Turbo">
-        <h2 class="mt-3 text-brand-ternary fs-7 lh-base">Panneaux solaires<span style="display: block;"></span>Sunpower
-          Turbo
-        </h2>
-        <p class="fs-8">La fiabilité et les performances des panneaux solaires Sunpower, à la pointe du
-          secteur, s'associent à la
-          technologie des micro-onduleurs pour maximiser le potentiel de votre toit.</p>
-      </div>
-
-    </section>
-  </main>
-</body>
-
+        <div class="row p-2 mt-4 bg-light rounded g-2">
+          <img class="p-0 rounded" src="../media/photos/panel1.png" alt="Panneaux solaires Sunpower Maxi" />
+          <h2 class="mt-3 text-brand-ternary fs-7 lh-base">Panneaux solaires Sunpower Maxi</h2>
+          <p class="fs-8">
+            Les panneaux solaires Sunpower Maxi allient le rendement le plus élevé du marché à une fiabilité inégalée et
+            une production optimale
+          </p>
+        </div>
+        <div class="row p-3 mt-4 bg-light rounded g-2">
+          <img class="p-0 rounded" src="../media/photos/panel3.png" alt="Panneaux solaires Sunpower Perform" />
+          <h2 class="mt-3 text-brand-ternary fs-7 lh-base">
+            Panneaux solaires<span style="display: block"></span>Sunpower Perform
+          </h2>
+          <p class="fs-8">
+            Les panneaux solaires Sunpower Perform affichent un rendement, une qualité et une fiabilité bien supérieurs
+            à ceux des panneaux conventionnels.
+          </p>
+        </div>
+        <div class="row p-3 mt-4 bg-light rounded g-2">
+          <img class="p-0 rounded" src="../media/photos/panel4.png" alt="Panneaux solaires Sunpower Turbo" />
+          <h2 class="mt-3 text-brand-ternary fs-7 lh-base">
+            Panneaux solaires<span style="display: block"></span>Sunpower Turbo
+          </h2>
+          <p class="fs-8">
+            La fiabilité et les performances des panneaux solaires Sunpower, à la pointe du secteur, s'associent à la
+            technologie des micro-onduleurs pour maximiser le potentiel de votre toit.
+          </p>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
