header footer links tag changes

--- a/pages/map.html
+++ b/pages/map.html
@@ -28,7 +28,7 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../js/main.js"></script>
+    <script src="../js/main.js" defer></script>
     <title>Carte interactive</title>
   </head>
   <body>
