--- a/pages/propos.html
+++ b/pages/propos.html
@@ -27,8 +27,7 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-
-    <script src="../js/main.js"></script>
+    <script src="../js/main.js" defer></script>
     <title>À propos</title>
   </head>
   <body>
