messy merging wtf

--- a/pages/product.html
+++ b/pages/product.html
@@ -21,9 +21,6 @@
     defer></script>
 
 
-
-
-
   <link rel="stylesheet" href="../style.css" />
   <script src="../index.js" defer></script>
   <title>Products</title>
@@ -68,6 +65,7 @@
   </div>
   <!-- End burger menu -->
   <main id="main">
+    <!-- LES OMBRIERES -->
     <section class="container p-3 ">
       <div class="row p-3 ">
         <h1 class="text-center fw-bolder text-uppercase text-brand-primary fs-2 lh-base py-4 text-shadow">Les ombrières
@@ -75,8 +73,6 @@
         <p class="fs-8">Le développement des ombrières solaires pour la recharge des véhicules électriques constitue le
           pilier de notre développement.</p>
       </div>
-
-      <!-- text center vs text start ? -->
       <div class="row gap-3 p-3 text-center">
         <h2 class="fs-8 text-start">Trois raisons de choisir les ombrières solaires Sunpower : </h2>
         <div id="durability">
@@ -87,8 +83,8 @@
             conditions
             réelles.
           </p>
-
         </div>
+
         <div id="fiabilité">
           <i class="bi bi-tools fs-0 text-brand-ternary"></i>
           <h3 class="mt-3 text-brand-ternary fs-7">Fiabilité éprouvée
@@ -98,6 +94,7 @@
             à
             toute épreuve.</p>
         </div>
+
         <div id="energie">
           <i class="bi bi-sun-fill fs-0 text-brand-ternary"></i>
           <h3 class="mt-3 text-brand-ternary fs-7">Plus d'énergie
@@ -106,10 +103,12 @@
             l'assurance
             de
             faire des économies.</p>
-
         </div>
       </div>
     </section>
+    <!-- FIN LES OMBRIERES -->
+
+    <!-- PRODUCTS -->
     <section id="products" class="container grid p-4 text-center">
       <div class="row">
         <h2 class="mt-3 fw-bolder text-uppercase text-brand-primary fs-2 py-4 text-shadow">Nos produits</h2>
@@ -144,8 +143,8 @@
           secteur, s'associent à la
           technologie des micro-onduleurs pour maximiser le potentiel de votre toit.</p>
       </div>
-
     </section>
+    <!-- PRODUCTS -->
   </main>
 
   <footer class="container-fluid p-3">
