--- a/pages/propos.html
+++ b/pages/propos.html
@@ -54,7 +54,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
         </div>
       </section>
-      <section class="grid gap-5 row p-3">
+      <section class="grid gap-5 row p-3" data-aos="fade-in">
         <h2>Historique</h2>
         <div class="bg-light py-3 rounded">
           <img src="../media/svg/people_group.svg" alt=" group of people" />
