--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -29,7 +29,7 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../js/main.js" defer></script>
+    <script src="../dist/main.js" defer></script>
     <title>Plan du site</title>
   </head>
   <body>
