--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,11 +51,8 @@
               <a href="" class="d-block p-2 rounded text-decoration-none text-white">Syndic</a>
             </li>
             <li class="rounded bg-brand-primary">
-              <a
-                href="./contact_ent_form.html"
-                class="d-block p-2 rounded text-decoration-none text-white h-100 w-100"
-                >Une Entreprise <span class="d-block">Et/Ou</span> Une
-                Collectivité</a
+              <a href="./contact_ent_form.html" class="d-block p-2 rounded text-decoration-none text-white h-100 w-100"
+                >Une Entreprise <span class="d-block">Et/Ou</span> Une Collectivité</a
               >
             </li>
           </ul>
