--- a/pages/contact_ent_form.html
+++ b/pages/contact_ent_form.html
@@ -8,10 +8,7 @@
     <!-- bootstrap -->
 
     <!-- icons -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet" />
 
     <!-- css -->
     <link
@@ -30,149 +27,53 @@
     ></script>
 
     <link href="../css/contact_ent_form.css" rel="stylesheet" />
-    <script defer src="../index.js"></script>
-    <script defer src="../js/contact_form.js"></script>
+    <script defer src="./index.js"></script>
+    
     <title>Page d'accueil</title>
   </head>
   <body>
-    <!-- Navbar -->
-    <header class="bg-brand-secondary" style="height: 10vh">
-      <div class="container">
-        <nav class="navbar">
-          <a class="navbar-brand" href="../index.html">
-            <img alt="Logo" src="../media/logo_mobile.png" width="50" />
-          </a>
-
-          <i class="bi bi-list text-brand-primary fs-0" id="burgerMenuIcon"></i>
-        </nav>
-      </div>
-    </header>
-    <!-- Burger menu (hidden at start) -->
-    <div class="d-none" id="burgerExpanded">
-      <ul
-        class="container list-unstyled text-center text-shadow d-flex flex-column justify-content-evenly"
-        style="height: 85vh"
-      >
-        <li class="fs-4">
-          <a
-            class="text-uppercase text-brand-primary"
-            href="./product.html#products"
-            >Ombrières solaires</a
-          >
-        </li>
-        <li>
-          <hr class="text-brand-ternary border-5 opacity-75" />
-        </li>
-        <li class="fs-4">
-          <a class="text-uppercase text-brand-primary" href="./product.html"
-            >Produits</a
-          >
-        </li>
-        <li class="fs-4">
-          <a class="text-uppercase text-brand-primary" href=""
-            >Carte interactive</a
-          >
-        </li>
-        <li class="fs-4">
-          <a class="text-uppercase text-brand-primary" href="./activities.html"
-            >Activités</a
-          >
-        </li>
-
-        <li>
-          <hr class="text-brand-ternary border-5 opacity-75" />
-        </li>
-        <li class="fs-4">
-          <a class="text-uppercase text-brand-primary" href="./contact.html"
-            >Nous contacter</a
-          >
-        </li>
-        <li class="fs-4">
-          <a class="text-uppercase text-brand-primary" href="./propos.html"
-            >À propos</a
-          >
-        </li>
-      </ul>
-    </div>
-    <!-- End burger menu -->
+ 
 
     <!--Start de la main page -->
     <main id="main" class="container">
       <div class="d-flex flex-column my-4 ent_form_page">
-        <div
-          id="ent_form"
-          class="d-inline-flex align-items-center w-100 mb-4 ent_form_page_head"
-        >
-          <a class="position-absolute" href=""
-            ><img alt="" src="../media/svg/arrow_back.svg"
-          /></a>
-          <h1 class="mx-auto text-center text-brand-primary text-uppercase">
-            Contact
-          </h1>
+        <div id="ent_form" class="d-inline-flex align-items-center w-100 mb-4 ent_form_page_head">
+          <a class="position-absolute" href=""><img alt="" src="../media/svg/arrow_back.svg" /></a>
+          <h1 class="mx-auto text-center text-brand-primary text-uppercase">Contact</h1>
         </div>
         <section id="steps" class="mx-auto w-75">
           <div
             id="first_step"
             class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center ent_form_page_rect_select w-75"
           >
-            <span
-              class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5"
-              >1</span
-            >
+            <span class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5">1</span>
             <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5"
-              >2</span
-            >
+            <span class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5">2</span>
             <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5"
-              >3</span
-            >
+            <span class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5">3</span>
           </div>
           <div
             id="second_step"
             class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center ent_form_page_rect_select"
           >
-            <span
-              class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5"
-              >1</span
-            >
+            <span class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5">1</span>
             <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5"
-              >2</span
-            >
+            <span class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5">2</span>
             <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5"
-              >3</span
-            >
+            <span class="text-decoration-none text-black bg-brand-ternary_40 py-3 px-4 mx-2 rounded-5">3</span>
           </div>
           <div
             id="third_step"
             class="bg-brand-secondary w-100 py-2 text-center mb-4 rounded-5 d-flex flex-row align-items-center ent_form_page_rect_select"
           >
-            <span
-              class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5"
-              >1</span
-            >
+            <span class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5">1</span>
             <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5"
-              >2</span
-            >
+            <span class="text-decoration-none text-black bg-brand-ternary py-3 px-4 mx-2 rounded-5">2</span>
             <hr class="w-25" />
-            <span
-              class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5"
-              >3</span
-            >
+            <span class="text-decoration-none text-black bg-brand-primary py-3 px-4 mx-2 rounded-5">3</span>
           </div>
         </section>
-        <div
-          id="contact_div"
-          class="d-flex flex-column align-items-center mb-5 ent_form_page_form mx-auto w-75"
-        >
+        <div id="contact_div" class="d-flex flex-column align-items-center mb-5 ent_form_page_form mx-auto w-75">
           <form
             id="contact_form"
             action="contact_ent_form.html"
@@ -256,9 +157,7 @@
                 id="ent_form_desc"
               ></textarea>
               <label class="d-none" for="ent_form_upload">Fichier</label>
-              <div
-                class="text-center border border-2 border-dark position-relative"
-              >
+              <div class="text-center border border-2 border-dark position-relative">
                 <input
                   class="opacity-0 position-absolute overflow-hidden d-block h-100 w-100"
                   type="file"
@@ -266,9 +165,7 @@
                   id="ent_form_upload"
                 />
                 <img class="my-2" src="../media/svg/upload.svg" alt="" />
-                <p class="text-brand-primary mx-1">
-                  Choisir un fichier depuis votre smartphone
-                </p>
+                <p class="text-brand-primary mx-1">Choisir un fichier depuis votre smartphone</p>
               </div>
             </div>
           </form>
@@ -289,10 +186,7 @@
             <span class="text-center mx-4" href="#" onclick="third_back()"
               ><img alt="" class="my-4" src="../media/svg/back_button.svg"
             /></span>
-            <button
-              class="h-100 bg-brand-primary border-0 text-white rounded-2 fs-3 p-2 mx-4"
-              onclick="voidCheck()"
-            >
+            <button class="h-100 bg-brand-primary border-0 text-white rounded-2 fs-3 p-2 mx-4" onclick="voidCheck()">
               Envoyer
             </button>
           </div>
@@ -305,50 +199,7 @@
     </main>
     <!--End de la main page -->
 
-    <!--Footer-->
-    <footer class="container-fluid p-3">
-      <div class="row col-10 rounded mx-auto mt-5" id="logo__footer">
-        <img
-          alt="Sunpower logo"
-          class="row mx-auto d-block"
-          src="./media/logo.png"
-        />
-      </div>
-      <div class="row p-1 mt-5" id="site_map__footer">
-        <ul class="col list-unstyled">
-          <li class="mb-3"><a href="">Ombrières solaires</a></li>
-          <li class="mb-3"><a href="">Carte interactive</a></li>
-          <li class="mb-3"><a href="">Produits</a></li>
-          <li class="mb-3"><a href="">Activités</a></li>
-          <li class="mb-3"><a href="">Partenaires</a></li>
-        </ul>
-        <ul class="col list-unstyled">
-          <li class="mb-3"><a href="">À propos</a></li>
-          <li class="mb-3"><a href="">Mentions légales</a></li>
-          <li class="mb-3"><a href="">CGV</a></li>
-          <li class="mb-3"><a href="">Plan du Site</a></li>
-        </ul>
-      </div>
-      <div class="container-fluid text-center">
-        <a href=""> Nous contacter</a>
-      </div>
-      <hr />
-      <div
-        class="container-fluid d-flex justify-content-center"
-        id="social__footer"
-        style="height: 5em"
-      >
-        <i class="bi bi-facebook col-3 fs-1 text-center blue"></i
-        ><i class="bi bi-linkedin col-3 fs-1 text-center blue"></i
-        ><i class="bi bi-twitter col-3 fs-1 text-center blue"></i>
-      </div>
-
-      <div class="container text-center" id="copyright">
-        <p>
-          <span>&copy;</span> 2022 Sunpower - Produits & Activités autour des
-          énergies renouvelables
-        </p>
-      </div>
-    </footer>
+  
+   
   </body>
 </html>
