--- a/test.html
+++ b/test.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <form action="test.html/" method="get">
-      <label for="test">test</label><input type="text" name="test" id="test" />
-      <label for="test2">test2</label
+      <label for="test">test</label><input type="text" name="test" id="test" /> <label for="test2">test2</label
       ><input type="text" name="test2" id="test2" />
       <button type="submit">send</button>
     </form>
