Revert "revert commit"
This reverts commit c7ae4fb4b87f4548195e7179f33ed21d56398a34.

--- a/pages/propos.html
+++ b/pages/propos.html
@@ -27,7 +27,7 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../dist/main.js" defer></script>
+    <script src="../js/main.js" defer></script>
     <title>À propos</title>
   </head>
   <body>
@@ -39,22 +39,22 @@
           d’euros.
         </p>
         <div class="mt-5">
-          <img class="float-start" id="serge" src="" alt="Serge turing" />
+          <img class="float-start" src="../media/photos/serge.png" alt="Serge turing" />
           <h3>Serge Turing</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
         </div>
         <div class="mt-5">
-          <img class="float-end" id="hugo" src="" alt="Hugo Oppenheimer" />
+          <img class="float-end" src="../media/photos/hugo.png" alt="Hugo Oppenheimer" />
           <h3>Hugo Oppenheimer</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
         </div>
         <div class="mt-5">
-          <img class="float-start" id="alex" src="" alt="Alex Pareneinstein" />
+          <img class="float-start" src="../media/photos/alex.png" alt="Alex Pareneinstein" />
           <h3>Alex Pareneinstein</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
         </div>
       </section>
-      <section id="#Historique" class="grid gap-5 row p-3" data-aos="fade-in">
+      <section class="grid gap-5 row p-3">
         <h2>Historique</h2>
         <div class="bg-light py-3 rounded">
           <img src="../media/svg/people_group.svg" alt=" group of people" />
