--- a/pages/cgv.html
+++ b/pages/cgv.html
@@ -29,7 +29,7 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../dist/main.js" defer></script>
+    <script src="../js/main.js" defer></script>
     <title>Conditions générales de vente</title>
   </head>
   <body>
