--- a/pages/product.html
+++ b/pages/product.html
@@ -27,7 +27,7 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../dist/main.js" defer></script>
+    <script src="../js/main.js" defer></script>
     <title>Products</title>
   </head>
 
