--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             tout en jouant le rôle d’abri.
           </p>
         </div>
-        <div class="row mb-lg-3">
+        <div class="row mb-lg-3 mt-lg-5 pt-lg-5">
           <p class="text-end col-10 offset-2 fs-8 text-lg-center col-lg-8 offset-lg-2">
             <span class="text-brand-primary fw-bold fs-7">Nos collaborateurs</span><br />
             et partenaires principaux sont l’<a href="https://www.ademe.fr/" class="text-brand-primary">ADEME</a>, l’<a
@@ -229,8 +229,7 @@
             >
               Collaboration avec l'<a href="https://www.ines-solaire.org/" class="text-brand-primary">INES</a>, le
               <a href="https://www.cea.fr/" class="text-brand-primary">CEA</a>
-              et l’
-              <a href="https://www.ademe.fr/" class="text-brand-primary">ADEME</a>
+              et l’<a href="https://www.ademe.fr/" class="text-brand-primary">ADEME</a>
             </li>
           </ul>
         </div>
