config for form into webpack

--- a/pages/contact_ent_form.html
+++ b/pages/contact_ent_form.html
@@ -27,13 +27,12 @@
     ></script>
 
     <link href="../css/contact_ent_form.css" rel="stylesheet" />
-    <script defer src="./index.js"></script>
-    
+    <link rel="stylesheet" href="../style.css" />
+    <script defer src="../dist/main.js"></script>
+
     <title>Page d'accueil</title>
   </head>
   <body>
- 
-
     <!--Start de la main page -->
     <main id="main" class="container">
       <div class="d-flex flex-column my-4 ent_form_page">
@@ -170,21 +169,21 @@
             </div>
           </form>
           <div id="first_form_btn" class="d-inline-flex align-items-center">
-            <span class="text-center" href="#" onclick="first_next()"
+            <span class="text-center" href="#" onclick="first_next();"
               ><img alt="" class="my-4" src="../media/svg/next_button.svg"
             /></span>
           </div>
           <div id="second_form_btn" class="d-inline-flex align-items-center">
-            <span class="text-center mx-4" href="#" onclick="second_back()"
-              ><img alt="" class="my-4" src="../media/svg/back_button.svg"
+            <span class="text-center mx-4" href="#" onclick="second_back();"
+              ><img alt="back" class="my-4" src="../media/svg/back_button.svg"
             /></span>
-            <span class="text-center mx-4" href="#" onclick="second_next()"
-              ><img alt="" class="my-4" src="../media/svg/next_button.svg"
+            <span class="text-center mx-4" href="#" onclick="second_next();"
+              ><img alt="next" class="my-4" src="../media/svg/next_button.svg"
             /></span>
           </div>
           <div id="third_form_btn" class="d-inline-flex align-items-center">
-            <span class="text-center mx-4" href="#" onclick="third_back()"
-              ><img alt="" class="my-4" src="../media/svg/back_button.svg"
+            <span class="text-center mx-4" href="#" onclick="third_back();"
+              ><img alt="back" class="my-4" src="../media/svg/back_button.svg"
             /></span>
             <button class="h-100 bg-brand-primary border-0 text-white rounded-2 fs-3 p-2 mx-4" onclick="voidCheck()">
               Envoyer
@@ -198,8 +197,5 @@
       </div>
     </main>
     <!--End de la main page -->
-
-  
-   
   </body>
 </html>
