--- a/pages/product.html
+++ b/pages/product.html
@@ -33,7 +33,7 @@
 
   <body>
     <main id="main">
-      <section class="container p-3">
+      <section class="container p-3 ">
         <div class="row p-3">
           <h1 class="text-center fw-bolder text-uppercase text-brand-primary fs-2 lh-base py-4 text-shadow">
             Les ombrières solaires
@@ -44,17 +44,18 @@
           </p>
         </div>
 
-        <!-- text center vs text start ? -->
-        <div class="row gap-3 p-3 text-center">
-          <h2 class="fs-8 text-start">Trois raisons de choisir les ombrières solaires Sunpower :</h2>
-          <div id="durability">
-            <i class="bi bi-calendar-check fs-0 text-brand-ternary"></i>
-            <h3 class="mt-3 text-brand-ternary fs-7">Durabilité prouvée</h3>
+       
+        <div class="row gap-3 p-3 text-center d-flex flex-row justify-content-lg-center vh-75">
+          <h2 class="d-inline-block fs-8 text-center">Trois raisons de choisir les ombrières solaires Sunpower :</h2>
+          
+          <div id="durability" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center">
+            <i class="bi bi-calendar-check fs-0 text-brand-ternary  flex-fill" ></i>
+            <h3 class="mt-3 text-brand-ternary fs-7 order-1 ">Durabilité prouvée</h3>
             <p class="fs-8">
               Les ombrières solaires Sunpower sont conçus pour fonctionner parfaitement en conditions réelles.
             </p>
           </div>
-          <div id="fiabilité">
+          <div id="fiabilité" class="col-lg-3 d-lg-flex flex-column flex-column-lg-reverse justify-content-center">
             <i class="bi bi-tools fs-0 text-brand-ternary"></i>
             <h3 class="mt-3 text-brand-ternary fs-7">Fiabilité éprouvée</h3>
             <p class="fs-8">
@@ -62,17 +63,17 @@
               épreuve.
             </p>
           </div>
-          <div id="energie">
-            <i class="bi bi-sun-fill fs-0 text-brand-ternary"></i>
-            <h3 class="mt-3 text-brand-ternary fs-7">Plus d'énergie</h3>
-            <p class="fs-8">
+          <div id="energie" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center">
+            <i class="bi bi-sun-fill fs-0 text-brand-ternary  flex-fill"></i>
+            <h3 class="mt-3 text-brand-ternary fs-7 order-1 ">Plus d'énergie</h3>
+            <p class="fs-8 m-lg-0">
               Sunpower produit davantage d'énergie sur toute la durée de vie du système et offre l'assurance de faire
               des économies.
             </p>
           </div>
         </div>
       </section>
-      <section id="products" class="container grid p-4 text-center">
+      <section id="products" class="container grid p-4 text-center ">
         <div class="row">
           <h2 class="mt-3 fw-bolder text-uppercase text-brand-primary fs-2 py-4 text-shadow">Nos produits</h2>
           <p class="text-start fs-8">
